# gdrive-catalog

./: .gitignore  AGENTS.md  EXAMPLES.md  QUICKSTART.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: docs.agent.md  general.agent.md
.github/workflows/: run-pytest.yml
docs/: EXAMPLES.md  QUICKSTART.md
gdrive_catalog/: __init__.py  cli.py  csv_validator.py  drive_service.py  exceptions.py  scanner.py
tests/: test_basic.py  test_cli.py  test_csv_validator.py  test_drive_service.py  test_exceptions.py  test_scanner.py
