[project]
name = "gdrive-catalog"
version = "0.1.0"
description = "CLI tool to scan Google Drive storage and create CSV catalogs with file metadata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "mutagen>=1.47.0",
    "typer>=0.20.0",
]

[project.scripts]
gdrive-catalog = "gdrive_catalog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
