[project]
name = "gdrive-catalog"
version = "0.1.0"
description = "CLI tool to scan Google Drive storage and create CSV catalogs with file metadata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",

    "typer>=0.20.0",
]

[project.scripts]
gdrive-catalog = "gdrive_catalog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["gdrive_catalog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=gdrive_catalog --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["gdrive_catalog"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
